Fixed see-more grid on mobile, removed borders on mobile. Fixed contact form mobile appearance. Made potential contact-form column width change to discuss.

--- a/src/assets/sass/global/inputs.scss
+++ b/src/assets/sass/global/inputs.scss
@@ -1,6 +1,11 @@
 .form-inline > input {
   flex-grow: 1;
+
+  @include media-breakpoint-down(sm) {
+    margin-left: 0 !important;
+  }
 }
+
 .message{
   height: 200px;
 }
