--- a/src/assets/sass/global/typography.scss
+++ b/src/assets/sass/global/typography.scss
@@ -25,5 +25,4 @@ h2 {
 
 p {
     font-family: 'Open Sans', sans-serif;
-    font-weight: 200;
 }
